# oface

./: .bumpversion.cfg  .gitignore  LICENSE  README.rst  setup.cfg
.github/workflows/: release.yml
oface/: __init__.py  face_analysis.py
oface/core/: face_align.py
oface/model/: __init__.py  base.py  face_detection.py  face_recognition.py
