[metadata]
name = oface
version = attr: oface.__version__
url = https://github.com/007gzs/oface
author = 007
author_email = 007gzs@gmail.com
description = OFace.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    opencv-python
    scikit-image
    onnx

[options.packages.find]
exclude = tests,tests.*,docs,docs.*

[flake8]
exclude = .git,__pycache
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 79
multi_line_output = 5
